<resources>
    <string name="app_name">Favor</string>
    <string name="app_name_sub">〜あなたのお店を集める〜</string>

    <!-- ユーザー登録画面 -->
    <string name="user_name"><font size="12">ユーザー名</font></string>
    <string name="user_age"><font size="12">年代</font></string>
    <string name="user_gender"><font size="12">性別</font></string>
    <string name="registration_user">はじめる</string>
    <string name="registration_user_progress">登録中です</string>
    <string name="validation_user_setting">ユーザー情報を入力してください</string>

    <!-- メイン画面 -->
    <string name="touch_nfc">タッチして入店する</string>
    <string name="touch_nfc_message">端末もしくはNFCシールを見つけたらタッチ！</string>
    <string name="touch_cuona_or_seal">OR</string>
    <string name="shop_history_title">入店履歴</string>
    <string name="shop_history_none">入店履歴はありません</string>
    <string name="user_setting_title"> の情報</string>
    <string name="main_progress_message">情報を取得中です</string>

    <!-- ユーザー画面 -->
    <string name="user_favorite">お気に入り</string>
    <string name="user_order_history">注文履歴</string>
    <string name="user_gender_male">男性</string>
    <string name="user_gender_female">女性</string>

    <!-- お気に入り追加画面 -->
    <string name="add_favorite_title">お気に入りを追加</string>
    <string name="add_favorite_message">あなたの好きなものを追加してみましょう。\n食べ物や飲み物など何でも追加することで\nおもてなしを受けやすくなります。</string>
    <string name="add_favorite_hint"><font size="12">例：ビーフカレー、ハイボールなど</font></string>
    <string name="add_favorite_button">お気に入りを追加する</string>
    <string name="add_favorite_error">好きなものの名前を入力してください</string>

    <!-- ユーザー情報編集画面 -->
    <string name="edit_user_title">ユーザー情報編集</string>
    <string name="edit_user_message">ユーザー情報を変更することが出来ます。</string>
    <string name="edit_user_button">ユーザー情報を変更する</string>
    <string name="user_image_title">プロフィール画像を変更</string>
    <string name="user_image_take_photo">写真を撮る</string>
    <string name="user_image_select_photo">ライブラリから選択</string>
    <string name="user_image_crop_hint">拡大縮小と回転と移動ができます</string>

    <!-- ショップ詳細画面 -->
    <string name="shop_detail_order_stop">お会計する</string>
    <string name="shop_detail_info">基本情報</string>
    <string name="shop_detail_order_menu">注文履歴</string>
    <string name="shop_menu_show">注文メニューを表示する</string>
    <string name="shop_address">住所</string>
    <string name="shop_phone_number">電話番号</string>
    <string name="shop_come_text">来店</string>
    <string name="shop_count_text">回目</string>
    <string name="shop_entering_text">ありがとうございます。現在来店中です。</string>
    <string name="shop_exit">アプリを終了します。よろしいですか？</string>

    <!-- ショップメニュー画面 -->
    <string name="shop_menu_title">MENU</string>
    <string name="shop_menu_order_button">注文する</string>
    <string name="shop_menu_order_dialog_title">注文数を選択してください</string>
    <string name="shop_menu_selected">選択中</string>

    <!-- 注文画面 -->
    <string name="order_num_text">注文数：</string>
    <string name="order_num_zero">注文する商品を選択してください</string>

    <!-- 注文完了画面 -->
    <string name="order_done_message">注文が完了しました</string>
    <string name="order_done_message_sub">注文が送信されました。\n届くまでの間しばらくお待ちください。</string>
    <string name="order_done_back_button_text">この画面を閉じる</string>
    <string name="order_done_price">合計金額</string>
    <string name="order_done_price_other">※ お一人当たりの支払金額 </string>

    <!-- お会計画面 -->
    <string name="order_stop_message">ご利用ありがとうございました。会計を行います。\n今回のご注文内容は以下となっております。</string>
    <string name="order_stop_button">会計する</string>

    <!-- nfc -->
    <string name="nfc_scan_title">スキャンの準備ができました</string>
    <string name="nfc_scan_message">CUONAへタッチしてください</string>

    <!-- ダイアログ -->
    <string name="nfc_dialog">NFCがオフになっています\nNFCをオンに設定してください</string>
    <string name="grant_permission">本アプリを使用するには、位置情報へのアクセスを許可する必要があります。</string>

    <!-- エラー -->
    <string name="error_common">必要なデータの取得に失敗しました。\n再度お試しください。</string>
    <string name="error_get_user">ユーザー情報の取得に失敗しました。\nアプリを再起動してください。</string>
    <string name="error_get_enter_history">入店履歴情報の取得に失敗しました。\nアプリを再起動してください。</string>
    <string name="error_init_loading">初回起動時の情報取得に失敗しています。\nアプリを再起動して再度お試しください。</string>
    <string name="error_network_disable">インターネットに接続してください。</string>
    <string name="error_network_disable_reboot">インターネットに接続して、アプリを再起動してください。</string>
    <string name="error_touch_cuona">必要なデータの取得に失敗しました。\n再度タッチしてください。</string>
    <string name="error_fail_get_device_ids">一覧データの取得に失敗しました。\nアプリを再起動して再取得してください。</string>
    <string name="load_devices_failed">デバイス一覧の取得に失敗しました</string>
    <string name="error_read_service_failed">このNFCではFavorサービスがご利用できません。</string>
    <string name="error_not_exist_in_devise_ids">利用されたNFCは本アプリに対応していません。</string>
    <string name="error_already_entered">店舗側での退店処理が未完了です。</string>
    <string name="error_group_not_active">このデバイスはお会計処理中です。店舗側での処理が完了するのをお待ち下さい。</string>
    <string name="error_already_order_stopped">すでにお会計処理が行われています。\n「お会計をする」ボタンより、退店処理を行ってください。</string>

    <!-- 全体 -->
    <string name="ok">OK</string>
    <string name="select">選択する</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_kana">キャンセル</string>
    <string name="apply">設定する</string>

</resources>
